<resources>
    <string name="app_name">Fastrrr</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_apps">Home</string>
    <string name="nav_my_apps">My Apps</string>
    <string name="nav_settings">Settings</string>


    <string name="nav_facebook">Facebook</string>
    <string name="nav_twitter">Twitter</string>
    <string name="nav_google_plus">Google+</string>

    <string name="nav_feedback">Feedback</string>
    <string name="nav_rate_us">Rate Us</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_whats_new">What\'s new</string>
    <string name="nav_show_tutorial">Show tutorial</string>

    <!-- Toolbar -->
    <string name="action_licenses">Licenses</string>
    <string name="action_settings">Settings</string>
    <string name="tab_title_record">Record</string>
    <string name="tab_title_saved_recordings">Saved Recordings</string>

    <!-- Toasts -->
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists. Please choose a different file name.</string>

    <!-- Notifications -->
    <string name="notification_recording">Recording...</string>

    <!-- Dialogs -->
    <string name="dialog_title_delete">Confirm Delete...</string>
    <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
    <string name="dialog_title_licenses">Open Source Licenses</string>
    <string name="dialog_title_share">Share File</string>
    <string name="dialog_title_rename">Rename File</string>
    <string name="dialog_title_options">Options</string>

    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>

    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="pause_recording_button">Pause</string>
    <string name="resume_recording_button">Resume</string>
    <string name="default_file_name">My Recording</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="record_in_progress">Recording</string>

    <string name="send_to">Send to</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Apps</item>
        <item>My Apps</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
