<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_apps"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_apps" />
        <item
            android:id="@+id/nav_my_apps"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_my_apps" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Follow Us">
        <menu>
            <item
                android:id="@+id/nav_facebook"
                android:title="@string/nav_facebook"
                android:icon="@drawable/ic_photo_library_black_24dp"/>
            <item
                android:id="@+id/nav_twitter"
                android:title="@string/nav_twitter"
                android:icon="@drawable/ic_photo_library_black_24dp"/>
            <item
                android:id="@+id/nav_google_plus"
                android:title="@string/nav_google_plus"
                android:icon="@drawable/ic_photo_library_black_24dp"/>
        </menu>
    </item>

    <item android:title="Miscellaneous">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/nav_feedback"
                android:icon="@drawable/ic_photo_library_black_24dp"/>
            <item
                android:id="@+id/nav_rate_us"
                android:title="@string/nav_rate_us"
                android:icon="@drawable/ic_photo_library_black_24dp"/>
            <item
                android:id="@+id/nav_whats_new"
                android:title="@string/nav_whats_new"
                android:icon="@drawable/ic_photo_library_black_24dp"/>
            <item
                android:id="@+id/nav_show_tutorial"
                android:title="@string/nav_show_tutorial"
                android:icon="@drawable/ic_photo_library_black_24dp"/>
        </menu>
    </item>

</menu>
